# gobblet-rl

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  gobblet-rl.apk  index.html  install_wasm.sh  main.py  main_random.py  pyproject.toml  pyproject_setuptools.toml  requirements.txt  setup.py
.github/workflows/: linux-test.yml  linux-tutorials-test.yml  macos-test.yml  pygbag.yml
gobblet/: board.py  example_random.py  example_tianshou.py  gobblet.py  gobblet_v0.py  gobblet_v1.py  utils.py
gobblet/examples/: RLlib_rock_paper_scissors.py  example_DQN_tianshou.py  example_RLlib.py  example_RLlib_dev.py  example_RLlib_from_multi_agent_cartpole.py  example_RLlib_selfplay.py  example_RLlib_v1.py  example_basic.py  example_interactive_pygame.py  example_random_admissable.py  example_record_game.py  example_rllib_from_rps.py  example_stable_baselines3.py  example_tianshou_DQN.py  example_tianshou_PPO.py  example_tianshou_greedy.py  example_tianshou_rainbow.py  example_user_input.py  utils.py
gobblet/game/: board.py  collector_manual_policy.py  gobblet.py  greedy_policy.py  greedy_policy_rllib.py  greedy_policy_tianshou.py  manual_policy.py  random_admissible_policy_rllib.py  utils.py
gobblet/log/gobblet/dqn/: events.out.tfevents.1674850026.Elliots-MBP.30079.0  policy.pth
gobblet_rl/: gobblet_v1.py
gobblet_rl/examples/: example_RLlib.py  example_basic.py  example_record_game.py  example_tianshou_DQN.py  example_tianshou_greedy.py  example_user_input.py
gobblet_rl/game/: board.py  gobblet.py  greedy_policy.py  greedy_policy_rllib.py  greedy_policy_tianshou.py  manual_policy.py  random_admissible_policy_rllib.py
tests/: test_gobblet_env.py  test_manual_policy_collector.py
tutorials/GreedyAgent/: greedy_agent.md  requirements.txt  tutorial_greedy.py
tutorials/PygameWASM/: pygame_wasm.md
tutorials/WebAssembly/: requirements.txt  web_assembly.md
