[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gobblet-rl"
authors = [
  { name="Elliot Tower", email="elliot@elliottower.com" },
]
description = "Multi-Agent Reinforcement Learning Environment for the board game Gobblet using PettingZoo."
requires-python = ">=3.8"
keywords = ["gobblet", "rl", "reinforcement learning", "pettingzoo", "gymnasium", "pygame", "tianshou"]
license = {file = 'LICENSE'}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic=["version", "readme", "dependencies"]

[tool.setuptools.dynamic]
version = {attr = "gobblet.__version__"}
readme = {file = ["README.md"]}
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/elliottower/gobblet-rl/"
"Bug Tracker" = "https://github.com/elliottower/gobblet/issues"